2004-01-23  Michael Koch  <konqueror@gmx.de>
	* javax/swing/AbstractAction.java: Reformated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76424 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-23  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/AbstractAction.java: Reformated.
+
+2004-01-23  Michael Koch  <konqueror@gmx.de>
+
 	* java/text/CollationElementIterator.java:
 	(setText): New method.
 
