PR optimization/13819 * config/sh/sh.c (sh_reorg): Compensate for sharing of CLOBBERs introduced by 2004-01-20's Jan Hubicka's copy_insn change. (sh_handle_sp_switch_attribute): Remove warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76425 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-23  Alexandre Oliva  <aoliva@redhat.com>
+
+	PR optimization/13819
+	* config/sh/sh.c (sh_reorg): Compensate for sharing of CLOBBERs 
+	introduced by 2004-01-20's Jan Hubicka's copy_insn change.
+	(sh_handle_sp_switch_attribute): Remove warning.
+
 2003-11-30  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (ix86_emit_restore_regs_using_mov):  Deal with large offsets.
