--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-23  Michael Koch  <konqueror@gmx.de>
 
+	* java/lang/VMClassLoader.java: Reworked imports.
+2004-01-23  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/AbstractAction.java: Reformated.
 
 2004-01-23  Michael Koch  <konqueror@gmx.de>
