* config/arm/arm.c (arm_legitimate_address_p): Don't check the mode 	size for minipool references.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76429 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  Daniel Jacobowitz  <drow@mvista.com>
+
+	* config/arm/arm.c (arm_legitimate_address_p): Don't check the mode
+	size for minipool references.
+
 2004-01-23  Roger Sayle  <roger@eyesopen.com>
 
 	* real.c (real_floor, real_ceil): Tweak to allow input and output
