* fold-const.c (fold_binary_op_with_conditional_arg): Only 	build a COMPOUND_EXPR if 'arg' is really a SAVE_EXPR.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76434 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-23  Eric Botcazou  <ebotcazou@act-europe.fr>
+            Olivier Hainque  <hainque@act-europe.fr>
+
+	* fold-const.c (fold_binary_op_with_conditional_arg): Only
+	build a COMPOUND_EXPR if 'arg' is really a SAVE_EXPR.
+
 2004-01-23  Daniel Jacobowitz  <drow@mvista.com>
 
 	* config/arm/arm.c (arm_legitimate_address_p): Don't check the mode
