--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  Zack Weinberg  <zack@codesourcery.com>
+
+	PR 18314
+	* gcc.dg/builtins-30.c: New testcase.
+
 2004-01-23  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* g++.dg/compat/compat.exp: Add LD_LIBRARY_PATH_32/64 for Solaris.
