--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2004-01-23  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* fixinc/inclhack.def (bad_lval): Renamed to ...
+	(alpha_bad_lval): ... this.
+	Removed file list.
+	Restrict to alpha*-dec-osf*.
+	* fixinc/fixincl.x: Regenerate.
+	* fixinc/tests/base/dirent.h: Remove, moving test ...
+	* fixinc/tests/base/testing.h: ... here, reflecting new name.
+
 2004-01-23  Zack Weinberg  <zack@codesourcery.com>
 
 	PR c/13814
