PR gcc/1532 	* cse.c (cse_change_cc_mode): New static function. 	(cse_change_cc_mode_insns, cse_cc_succs): Likewise. 	(cse_condition_code_reg): New function. 	* rtl.h (cse_condition_code_reg): Declare. 	* toplev.c (rest_of_handle_cse2): Call cse_condition_code_reg. 	* target.h (struct gcc_target): Add fixed_condition_code_regs and 	cc_modes_compatible. 	* target-def.h (TARGET_FIXED_CONDITION_CODE_REGS): Define. 	(TARGET_CC_MODES_COMPATIBLE): Define. 	(TARGET_INITIALIZER): Add new initializers. 	* targhooks.c (default_cc_modes_compatible): New function. 	* targhooks.c (default_cc_modes_compatible): Declare. 	* hooks.c (hook_bool_intp_intp_false): New function. 	* hooks.h (hook_bool_intp_intp_false): Declare. 	* config/i386/i386.c (TARGET_FIXED_CONDITION_CODE_REGS): Define. 	(TARGET_CC_MODES_COMPATIBLE): Define. 	(ix86_fixed_condition_code_regs): New static function. 	(ix86_cc_modes_compatible): Likewise. 	* doc/tm.texi (Condition Code): Document new hooks.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76454 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,26 @@
+2004-01-23  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	PR gcc/1532
+	* cse.c (cse_change_cc_mode): New static function.
+	(cse_change_cc_mode_insns, cse_cc_succs): Likewise.
+	(cse_condition_code_reg): New function.
+	* rtl.h (cse_condition_code_reg): Declare.
+	* toplev.c (rest_of_handle_cse2): Call cse_condition_code_reg.
+	* target.h (struct gcc_target): Add fixed_condition_code_regs and
+	cc_modes_compatible.
+	* target-def.h (TARGET_FIXED_CONDITION_CODE_REGS): Define.
+	(TARGET_CC_MODES_COMPATIBLE): Define.
+	(TARGET_INITIALIZER): Add new initializers.
+	* targhooks.c (default_cc_modes_compatible): New function.
+	* targhooks.c (default_cc_modes_compatible): Declare.
+	* hooks.c (hook_bool_intp_intp_false): New function.
+	* hooks.h (hook_bool_intp_intp_false): Declare.
+	* config/i386/i386.c (TARGET_FIXED_CONDITION_CODE_REGS): Define.
+	(TARGET_CC_MODES_COMPATIBLE): Define.
+	(ix86_fixed_condition_code_regs): New static function.
+	(ix86_cc_modes_compatible): Likewise.
+	* doc/tm.texi (Condition Code): Document new hooks.
+
 2004-01-23  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* fixinc/inclhack.def (bad_lval): Renamed to ...
