--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-23  Jan Hubicka  <jh@suse.cz>
+
+	* alloc-pool.c (align_four): Kill.
+	(create_alloc_pool): Align size to eight.
+	(free_alloc_pool, free_pool): Invalidate deallocated data.
+
 2004-01-23  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	PR gcc/1532
