--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-23  Jan Hubicka  <jh@suse.cz>
 
+	* emit-rtl.c (change_address_1):  Do not re-generate the RTX if nothing
+	change.
+
 	* alloc-pool.c (align_four): Kill.
 	(create_alloc_pool): Align size to eight.
 	(free_alloc_pool, free_pool): Invalidate deallocated data.
