--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-23  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/xtensa/xtensa.c (xtensa_va_arg): Handle complex values as
+	separate real and imaginary parts.
+	* config/xtensa/xtensa.h (SPLIT_COMPLEX_ARGS): Define.
+
 2004-01-23  Hartmut Penner <hpenner@de.ibm.com>
 
 	PR target/13674
