--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  Andrew Pinski  <apinski@apple.com>
+
+	* config/rs6000/rs6000.md (call): Fix misappiled patch.
+	(call_value): Likewise.
+
 2004-01-23  Richard Henderson  <rth@redhat.com>
 
         PR opt/12941
