2004-01-23  Andrew Pinski  <apinski@apple.com>
        * gcc.dg/20030121-1.c: Move to ..
        * gcc.dg/20040121-1.c: here.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76463 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  Andrew Pinski  <apinski@apple.com>
+
+	* gcc.dg/20030121-1.c: Move to ..
+	* gcc.dg/20040121-1.c: here.
+
 2004-01-23  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/builtins-29.c: New test case.
