* Makefile.def (target_modules) [libiberty]: Don't stage. * Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76475 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-23  DJ Delorie  <dj@redhat.com>
+
+	* Makefile.def (target_modules) [libiberty]: Don't stage.
+	* Makefile.in: Rebuilt.
+
 2004-01-20  Caroline Tice  <ctice@apple.com>
 
 	* MAINTAINERS: Add myself to write-after-approval.
