* c-typeck.c (build_conditional_expr): Do not allow non-lvalue 	arrays.
testsuite:
	* gcc.dg/c90-array-lval-7.c, gcc.dg/c99-array-lval-7.c: New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76477 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-24  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* gcc.dg/c90-array-lval-7.c, gcc.dg/c99-array-lval-7.c: New tests.
+
 2004-01-23  Andrew Pinski  <apinski@apple.com>
 
 	* gcc.dg/20030121-1.c: Move to ..
