--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-24  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* c-typeck.c (build_conditional_expr): Do not allow non-lvalue
+	arrays.
+
 2004-01-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* recog.c: Fix a typo in copyright.
