* cselib.c (remove_useless_values):  Do not access discarded values.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76478 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-24  Jan Hubicka  <jh@suse.cz>
+
+	* cselib.c (remove_useless_values):  Do not access discarded values.
+
 2004-01-24  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* c-typeck.c (build_conditional_expr): Do not allow non-lvalue
