* gcc.dg/builtins-30.c: Move dg-warning marks to the proper lines.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76482 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/builtins-30.c: Move dg-warning marks to the proper lines.
+
 2004-01-24  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* gcc.dg/c90-array-lval-7.c, gcc.dg/c99-array-lval-7.c: New tests.
