--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-24  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.h (REG_OK_FOR_INDEX_NONSTRICT_P): New.
+	(REG_OK_FOR_BASE_NONSTRICT_P): Likewise.
+	(REG_OK_FOR_INDEX_STRICT_P): Likewise.
+	(REG_OK_FOR_BASE_STRICT_P): Likewise.
+	(REG_OK_FOR_INDEX_STRICT_P): Use REGNO_OK_FOR_INDEX_P.
+	(REG_OK_FOR_BASE_STRICT_P): Use REGNO_OK_FOR_BASE_P.
+	(REG_OK_FOR_INDEX_P): Use REG_OK_FOR_INDEX_STRICT_P.
+	(REG_OK_FOR_BASE_P): Use REG_OK_FOR_BASE_STRICT_P.
+
 2004-01-24  Jan Hubicka  <jh@suse.cz>
 
 	* cselib.c (remove_useless_values):  Do not access discarded values.
