--- a/compile-server-branch/gcc/cp/ChangeLog
+++ b/compile-server-branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-23  Mike Stump  <mrs@apple.com>
+
+	* lex.c (lang_clear_identifier): Remove unneeded code.
+
 2004-01-21  Mike Stump  <mrs@apple.com>
 
 	* lex.c (lang_clear_identifier): Don't clear symbol table as we
