--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-24  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* cse.c: (cse_cc_succs) Fix comparison warning.
+
 2004-01-24  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.md: Remove extraneous USE in expanders.
