--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20040123-1.c: New test.
+
 2004-01-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/builtins-30.c: Move dg-warning marks to the proper lines.
