--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-24  Michael Koch  <konqueror@gmx.de>
+
+	* java/util/zip/InflaterInputStream.java: Merged class documentation
+	with classpath.
+
 2004-01-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* include/powerpc-signal.h: Add #ifndef __powerpc64__ around the
