2004-01-24  Michael Koch  <konqueror@gmx.de>
	* Makefile.am: Added library version to gtk peer lib.
	* Makefile.in: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76520 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-24  Michael Koch  <konqueror@gmx.de>
 
+	* Makefile.am: Added library version to gtk peer lib.
+	* Makefile.in: Regenerated.
+
+2004-01-24  Michael Koch  <konqueror@gmx.de>
+
 	* java/util/zip/InflaterInputStream.java: Merged class documentation
 	with classpath.
 
