* doc/frontends.texi: Update copyright. 	* doc/gcov.texi: Likewise. 	* doc/gty.texi: Likewise. 	* doc/sourcebuild.texi: Likewise. 	* doc/standards.texi: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76537 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-24  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/frontends.texi: Update copyright.
+	* doc/gcov.texi: Likewise.
+	* doc/gty.texi: Likewise.
+	* doc/sourcebuild.texi: Likewise.
+	* doc/standards.texi: Likewise.
+
 2004-01-24  Herman A.J. ten Brugge  <hermantenbrugge@home.nl>
 
 	PR target/12978
