--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-25  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.dg/torture/mips-clobber-at.c: New test.
+
 2004-01-24  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* gcc.dg/20040124-1.c: New test.
