--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-25  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/vax/vax.c (TARGET_PROMOTE_PROTOTYPES): New.
+	(TARGET_STRUCT_VALUE_RTX): Likewise.
+	(vax_struct_value_rtx): Likewise.
+	* config/vax/vax.h (STRUCT_VALUE_REGNUM): Rename to
+	VAX_STRUCT_VALUE_REGNUM.
+	(PROMOTE_PROTOTYPES): Remove.
+
 2004-01-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
  
         * config/c4x/c4x.h (LEGITIMIZE_RELOAD_ADDRESS):  Handle symref.
