--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,24 @@
 2004-01-25  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* config/pa/pa-protos.h: Remove the prototype for
+	hppa_builtin_saveregs.  Add a prototype for
+	pa_return_in_memory.
+	* config/pa/pa.c (TARGET_PROMOTE_FUNCTION_RETURN): New.
+	(TARGET_PROMOTE_PROTOTYPES): Likewise.
+	(TARGET_STRUCT_VALUE_RTX): Likewise.
+	(TARGET_RETURN_IN_MEMORY): Likewise.
+	(TARGET_EXPAND_BUILTIN_SAVEREGS): Likewise.
+	(pa_struct_value_rtx): Likewise.
+	(pa_return_in_memory): Likewise.
+	* config/pa/pa.h (STRUCT_VALUE_REGNUM): Rename to
+	PA_STRUCT_VALUE_REGNUM.
+	(INIT_CUMULATIVE_ARGS): Use pa_return_in_memory.
+	(EXPAND_BUILTIN_SAVEREGS): Remove.
+	(PROMOTE_PROTOTYPES): Likewise.
+	(PROMOTE_FUNCTION_RETURN): Likewise.
+
+2004-01-25  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/vax/vax.c (TARGET_PROMOTE_PROTOTYPES): New.
 	(TARGET_STRUCT_VALUE_RTX): Likewise.
 	(vax_struct_value_rtx): Likewise.
