--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
+	* config/c4x/c4x.c (c4x_legitimate_address_p):  Invalidate direct
+	memory references if TARGET_EXPOSE_LDP nonzero.
+
+2004-01-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
 	* config/c4x/c4x.c (legitimize_operands): Truncate invalid shift counts.
 	
 2004-01-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
