* config/mips/mips.c (mips16_optimize_gp): Delete. 	(mips_reorg): Don't call it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76623 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-26  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.c (mips16_optimize_gp): Delete.
+	(mips_reorg): Don't call it.
+
 2004-01-26  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
 	* config/c4x/c4x.md (addqi3_noclobber): Move up pecking order.
